--- a/src/Resources/app/administration/src/component/slides/form/container/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/container/template.html.twig
@@ -12,8 +12,8 @@
 
                 <mt-switch 
                     class="blur-switch-input"
-                    @change="slideViewportSettings.container.columnWrap = $event"
-                    :checked="slideViewportSettings.container.columnWrap"
+                    @change="viewportSettings.container.columnWrap = $event"
+                    :checked="viewportSettings.container.columnWrap"
                     :label="$tc('blurElysiumSlides.forms.slideDirectionColumn.label')" />
             </blur-column>
 
@@ -24,7 +24,7 @@
                 <blur-select-input 
                     :label="$tc('blurElysiumSlides.forms.slideContentOrder.label')"
                     :helpText="$tc('blurElysiumSlides.forms.slideContentOrder.helpText')"
-                    :placeholder="devicePlaceholder('container.order', 'default', 'blurElysiumSlides.forms.slideContentOrder')"
+                    :placeholder="viewportsPlaceholder('container.order', 'default', 'blurElysiumSlides.forms.slideContentOrder')"
                     :device="currentDevice"
                     :show-device="true"
                     :options="[
@@ -32,7 +32,7 @@
                         {value: 'reverse', label: $tc('blurElysiumSlides.forms.slideContentOrder.reverse') }
                     ]"
                     @on-device="deviceSwitch"
-                    v-model:value="slideViewportSettings.container.order" /> 
+                    v-model:value="viewportSettings.container.order" /> 
             </blur-column>
 
             <blur-column
@@ -42,11 +42,11 @@
                 <blur-number-input 
                     :label="$tc('blurElysiumSlides.forms.slideWidth.label')"
                     :device="currentDevice"
-                    :placeholder="devicePlaceholder('container.maxWidth', $t('blurElysium.general.noLimit'))"
+                    :placeholder="viewportsPlaceholder('container.maxWidth', $t('blurElysium.general.noLimit'))"
                     :show-device="true"
                     @on-device="deviceSwitch"
-                    :model-value="slideViewportSettings.container.maxWidth"
-                    @update-value="value => slideViewportSettings.container.maxWidth = value" /> 
+                    :model-value="viewportSettings.container.maxWidth"
+                    @update-value="value => viewportSettings.container.maxWidth = value" /> 
             </blur-column>
 
             <blur-column
@@ -79,11 +79,11 @@
                 <blur-number-input  
                     :label="$tc('blurElysium.general.paddingX')"
                     :device="currentDevice"
-                    :placeholder="devicePlaceholder('container.paddingX', 15)"
+                    :placeholder="viewportsPlaceholder('container.paddingX', 15)"
                     :show-device="true"
                     @on-device="deviceSwitch"
-                    :model-value="slideViewportSettings.container.paddingX"
-                    @update-value="value => slideViewportSettings.container.paddingX = value" /> 
+                    :model-value="viewportSettings.container.paddingX"
+                    @update-value="value => viewportSettings.container.paddingX = value" /> 
             </blur-column>
 
             <blur-column
@@ -93,11 +93,11 @@
                 <blur-number-input       
                     :label="$tc('blurElysium.general.paddingY')"
                     :device="currentDevice"
-                    :placeholder="devicePlaceholder('container.paddingY', 15)"
+                    :placeholder="viewportsPlaceholder('container.paddingY', 15)"
                     :show-device="true"
                     @on-device="deviceSwitch"
-                    :model-value="slideViewportSettings.container.paddingY"
-                    @update-value="value => slideViewportSettings.container.paddingY = value" /> 
+                    :model-value="viewportSettings.container.paddingY"
+                    @update-value="value => viewportSettings.container.paddingY = value" /> 
             </blur-column>
 
             <blur-column
@@ -107,11 +107,11 @@
                 <blur-number-input 
                     :label="$tc('blurElysium.general.gap')"
                     :device="currentDevice"
-                    :placeholder="devicePlaceholder('container.gap', 20)"
+                    :placeholder="viewportsPlaceholder('container.gap', 20)"
                     :show-device="true"
                     @on-device="deviceSwitch"
-                    :model-value="slideViewportSettings.container.gap"
-                    @update-value="value => slideViewportSettings.container.gap = value" /> 
+                    :model-value="viewportSettings.container.gap"
+                    @update-value="value => viewportSettings.container.gap = value" /> 
             </blur-column>
 
             <blur-column
@@ -121,11 +121,11 @@
                 <blur-number-input 
                     :label="$tc('blurElysium.general.borderRadius')"
                     :device="currentDevice"
-                    :placeholder="devicePlaceholder('container.borderRadius', 0)"
+                    :placeholder="viewportsPlaceholder('container.borderRadius', 0)"
                     :show-device="true"
                     @on-device="deviceSwitch"
-                    :model-value="slideViewportSettings.container.borderRadius"
-                    @update-value="value => slideViewportSettings.container.borderRadius = value" /> 
+                    :model-value="viewportSettings.container.borderRadius"
+                    @update-value="value => viewportSettings.container.borderRadius = value" /> 
             </blur-column>
 
         </blur-section>
@@ -145,7 +145,7 @@
 
                 <blur-select-input 
                     :label="$tc('blurElysium.general.jusitifyContent')" 
-                    :placeholder="devicePlaceholder('container.justifyContent', 'normal', 'blurElysium.general')"
+                    :placeholder="viewportsPlaceholder('container.justifyContent', 'normal', 'blurElysium.general')"
                     :device="currentDevice"
                     :show-device="true"
                     :options="[
@@ -158,7 +158,7 @@
                         { value: 'space-around', label: $tc('blurElysium.general.jusitifyAroud') } 
                     ]"
                     @on-device="deviceSwitch"
-                    v-model:value="slideViewportSettings.container.justifyContent" />
+                    v-model:value="viewportSettings.container.justifyContent" />
             </blur-column>
 
             <blur-column
@@ -167,7 +167,7 @@
 
                 <blur-select-input 
                     :label="$tc('blurElysium.general.alignItemsLabel')" 
-                    :placeholder="devicePlaceholder('container.alignItems', 'center', 'blurElysium.general')"
+                    :placeholder="viewportsPlaceholder('container.alignItems', 'center', 'blurElysium.general')"
                     :device="currentDevice"
                     :show-device="true"
                     :options="[
@@ -176,7 +176,7 @@
                         { value: 'flex-end', label: $tc('blurElysium.general.alignEnd') }
                     ]"
                     @on-device="deviceSwitch"
-                    v-model:value="slideViewportSettings.container.alignItems" />
+                    v-model:value="viewportSettings.container.alignItems" />
             </blur-column>
 
         </blur-section>
