fix(admin-ui): cutoff description editor popover in slide-builder

--- a/src/Resources/app/administration/src/component/slides/section/base/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/section/base/template.html.twig
@@ -1,7 +1,10 @@
 <mt-card
     position-identifier="blurElysium.slide.section.base"
     :title="cardTitle"
-    :class="['content-no-padding']">
+    :class="['content-no-padding']"
+    :style="{
+        overflow: 'visible',
+    }">
 
     <template #headerRight>
 
