--- a/src/Resources/app/administration/src/component/slides/form/cover/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/cover/template.html.twig
@@ -35,25 +35,39 @@
             :cols-tablet="6"
             :cols-desktop="8"
             :style="viewStyle({
+                mobile:  { position: 'relative' },
                 desktop: { borderRight: '1px solid var(--color-border-primary-default)' }
             })">
+
+
+            <mt-loader v-if="mediaLoading" />
 
             <template v-if="activeTab === 'coverImage'">
 
                 <blur-section
                     gap-y
                     :description="$tc('blurElysiumSlides.forms.slideCoverImage.description')">
-
+    
                     <blur-column>
-                        <blur-elysium-media-upload 
-                            allowed-file="image/*"
-                            :uploadTag="coverImageUploadTag" 
-                            :media="coverImageMedia" 
+
+                        <sw-upload-listener
+                            :upload-tag="slideCoverUploadTag"
+                            auto-upload
+                            @media-upload-finish="setSlideCover"
+                        />
+                        <sw-media-upload-v2
+                            variant="regular"
+                            label="Medium"
                             :disabled="!(permissionCreate || permissionEdit)"
-                            @media-remove="payload => resetMedia( coverImageProperty )"
-                            @upload-finished="payload => setMedia( coverImageProperty, payload.targetId )"
-                            @media-dropped="payload => setMedia( coverImageProperty, payload.id, 'image')"
-                            @media-sidebar-open="mediaSidebar.openContent()" />
+                            file-accept="image/*"
+                            :upload-tag="slideCoverUploadTag"
+                            :source="slideCover"
+                            :allow-multi-select="false"
+                            :default-folder="'blur_elysium_slides'"
+                            @media-drop="setSlideCover"
+                            @media-upload-remove-image="removeSlideCover"
+                            @media-upload-sidebar-open="mediaSidebar.openContent()"
+                        />
                     </blur-column>
 
                 </blur-section>
@@ -63,19 +77,30 @@
 
                 <blur-section
                     gap-y
-                    :description="$tc('blurElysiumSlides.forms.slideCoverVideo.description')">
+                    :description="$tc('blurElysiumSlides.forms.slideCoverVideo.description')"
+                    >
 
-                    <blur-column>
-                        <blur-elysium-media-upload 
-                            allowed-file="image/*"
-                            :uploadTag="'blur-elysium-slide-cover-video'" 
-                            :media="coverVideoMedia" 
-                            :disabled="!(permissionCreate || permissionEdit)"
-                            :style="{ gridColumnEnd: 'span 12' }"
-                            @media-remove="payload => resetMedia( 'slideCoverVideo' )"
-                            @upload-finished="payload => setMedia( 'slideCoverVideo', payload.targetId )"
-                            @media-dropped="payload => setMedia( 'slideCoverVideo', payload.id, 'image')"
-                            @media-sidebar-open="mediaSidebar.openContent()" />
+                    <blur-column>  
+
+                            <sw-upload-listener
+                                upload-tag="blur-elysium-slide-cover-video"
+                                auto-upload
+                                @media-upload-finish="payload => setSlideCover(payload, true)"
+                            />
+                            <sw-media-upload-v2
+                                ref="coverVideoUploadElement"
+                                variant="regular"
+                                label="Medium"
+                                :disabled="!(permissionCreate || permissionEdit)"
+                                file-accept="video/*"
+                                upload-tag="blur-elysium-slide-cover-video"
+                                :source="slideCoverVideo"
+                                :allow-multi-select="false"
+                                :default-folder="'blur_elysium_slides'"
+                                @media-drop="payload => setSlideCover(payload, true)"
+                                @media-upload-remove-image="removeSlideCover(true)"
+                                @media-upload-sidebar-open="mediaSidebar.openContent()"
+                            />
                     </blur-column>
 
                 </blur-section>
